src/lib.rs

    pub fn HPDF_LoadU3DFromFile(pdf: HPDF_Doc,
                                filename: *const ::libc::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadU3DFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                               size: HPDF_UINT) -> HPDF_Image;
    pub fn HPDF_Image_LoadRaw1BitImageFromMem(pdf: HPDF_Doc,
                                              buf: *const HPDF_BYTE,
                                              width: HPDF_UINT,
                                              height: HPDF_UINT,
                                              line_width: HPDF_UINT,
                                              black_is1: HPDF_BOOL,
                                              top_is_first: HPDF_BOOL)
     -> HPDF_Image;
    pub fn HPDF_LoadRawImageFromFile(pdf: HPDF_Doc,
                                     filename: *const ::libc::c_char,
                                     width: HPDF_UINT, height: HPDF_UINT,
                                     color_space: HPDF_ColorSpace)
     -> HPDF_Image;
    pub fn HPDF_LoadRawImageFromMem(pdf: HPDF_Doc, buf: *const HPDF_BYTE,
                                    width: HPDF_UINT, height: HPDF_UINT,
                                    color_space: HPDF_ColorSpace,
                                    bits_per_component: HPDF_UINT)
     -> HPDF_Image;
    pub fn HPDF_Image_AddSMask(image: HPDF_Image, smask: HPDF_Image)
     -> HPDF_STATUS;
    pub fn HPDF_Image_GetSize(image: HPDF_Image) -> HPDF_Point;
    pub fn HPDF_Image_GetSize2(image: HPDF_Image, size: *mut HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Image_GetWidth(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetHeight(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetBitsPerComponent(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetColorSpace(image: HPDF_Image)
     -> *const ::libc::c_char;
    pub fn HPDF_Image_SetColorMask(image: HPDF_Image, rmin: HPDF_UINT,
                                   rmax: HPDF_UINT, gmin: HPDF_UINT,
                                   gmax: HPDF_UINT, bmin: HPDF_UINT,
                                   bmax: HPDF_UINT) -> HPDF_STATUS;
    pub fn HPDF_Image_SetMaskImage(image: HPDF_Image, mask_image: HPDF_Image)
     -> HPDF_STATUS;
    pub fn HPDF_SetInfoAttr(pdf: HPDF_Doc, _type: HPDF_InfoType,
                            value: *const ::libc::c_char) -> HPDF_STATUS;
    pub fn HPDF_GetInfoAttr(pdf: HPDF_Doc, _type: HPDF_InfoType)
     -> *const ::libc::c_char;
    pub fn HPDF_SetInfoDateAttr(pdf: HPDF_Doc, _type: HPDF_InfoType,
                                value: HPDF_Date) -> HPDF_STATUS;
    pub fn HPDF_SetPassword(pdf: HPDF_Doc,
                            owner_passwd: *const ::libc::c_char,
                            user_passwd: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_SetPermission(pdf: HPDF_Doc, permission: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_SetEncryptionMode(pdf: HPDF_Doc, mode: HPDF_EncryptMode,
                                  key_len: HPDF_UINT) -> HPDF_STATUS;
    pub fn HPDF_SetCompressionMode(pdf: HPDF_Doc, mode: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_Font_GetFontName(font: HPDF_Font) -> *const ::libc::c_char;
    pub fn HPDF_Font_GetEncodingName(font: HPDF_Font)
     -> *const ::libc::c_char;
    pub fn HPDF_Font_GetUnicodeWidth(font: HPDF_Font, code: HPDF_UNICODE)
     -> HPDF_INT;
    pub fn HPDF_Font_GetBBox(font: HPDF_Font) -> HPDF_Box;
    pub fn HPDF_Font_GetAscent(font: HPDF_Font) -> HPDF_INT;
    pub fn HPDF_Font_GetDescent(font: HPDF_Font) -> HPDF_INT;
    pub fn HPDF_Font_GetXHeight(font: HPDF_Font) -> HPDF_UINT;
    pub fn HPDF_Font_GetCapHeight(font: HPDF_Font) -> HPDF_UINT;
    pub fn HPDF_Font_TextWidth(font: HPDF_Font, text: *const HPDF_BYTE,
                               len: HPDF_UINT) -> HPDF_TextWidth;
    pub fn HPDF_Font_MeasureText(font: HPDF_Font, text: *const HPDF_BYTE,
                                 len: HPDF_UINT, width: HPDF_REAL,
                                 font_size: HPDF_REAL, char_space: HPDF_REAL,
                                 word_space: HPDF_REAL, wordwrap: HPDF_BOOL,
                                 real_width: *mut HPDF_REAL) -> HPDF_UINT;
    pub fn HPDF_AttachFile(pdf: HPDF_Doc, file: *const ::libc::c_char)
     -> HPDF_EmbeddedFile;
    pub fn HPDF_CreateExtGState(pdf: HPDF_Doc) -> HPDF_ExtGState;
    pub fn HPDF_ExtGState_SetAlphaStroke(ext_gstate: HPDF_ExtGState,
                                         value: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_ExtGState_SetAlphaFill(ext_gstate: HPDF_ExtGState,
                                       value: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_ExtGState_SetBlendMode(ext_gstate: HPDF_ExtGState,
                                       mode: HPDF_BlendMode) -> HPDF_STATUS;
    pub fn HPDF_Page_TextWidth(page: HPDF_Page, text: *const ::libc::c_char)
     -> HPDF_REAL;
    pub fn HPDF_Page_MeasureText(page: HPDF_Page, text: *const ::libc::c_char,
                                 width: HPDF_REAL, wordwrap: HPDF_BOOL,
                                 real_width: *mut HPDF_REAL) -> HPDF_UINT;
    pub fn HPDF_Page_GetWidth(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetHeight(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetGMode(page: HPDF_Page) -> HPDF_UINT16;
    pub fn HPDF_Page_GetCurrentPos(page: HPDF_Page) -> HPDF_Point;
    pub fn HPDF_Page_GetCurrentPos2(page: HPDF_Page, pos: *mut HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Page_GetCurrentTextPos(page: HPDF_Page) -> HPDF_Point;
    pub fn HPDF_Page_GetCurrentTextPos2(page: HPDF_Page, pos: *mut HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Page_GetCurrentFont(page: HPDF_Page) -> HPDF_Font;
    pub fn HPDF_Page_GetCurrentFontSize(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetTransMatrix(page: HPDF_Page) -> HPDF_TransMatrix;
    pub fn HPDF_Page_GetLineWidth(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetLineCap(page: HPDF_Page) -> HPDF_LineCap;
    pub fn HPDF_Page_GetLineJoin(page: HPDF_Page) -> HPDF_LineJoin;
    pub fn HPDF_Page_GetMiterLimit(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetDash(page: HPDF_Page) -> HPDF_DashMode;
    pub fn HPDF_Page_GetFlat(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetCharSpace(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetWordSpace(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetHorizontalScalling(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetTextLeading(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetTextRenderingMode(page: HPDF_Page)
     -> HPDF_TextRenderingMode;
    pub fn HPDF_Page_GetTextRaise(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetTextRise(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetRGBFill(page: HPDF_Page) -> HPDF_RGBColor;
    pub fn HPDF_Page_GetRGBStroke(page: HPDF_Page) -> HPDF_RGBColor;
    pub fn HPDF_Page_GetCMYKFill(page: HPDF_Page) -> HPDF_CMYKColor;
    pub fn HPDF_Page_GetCMYKStroke(page: HPDF_Page) -> HPDF_CMYKColor;
    pub fn HPDF_Page_GetGrayFill(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetGrayStroke(page: HPDF_Page) -> HPDF_REAL;
    pub fn HPDF_Page_GetStrokingColorSpace(page: HPDF_Page)
     -> HPDF_ColorSpace;
    pub fn HPDF_Page_GetFillingColorSpace(page: HPDF_Page) -> HPDF_ColorSpace;
    pub fn HPDF_Page_GetTextMatrix(page: HPDF_Page) -> HPDF_TransMatrix;
    pub fn HPDF_Page_GetGStateDepth(page: HPDF_Page) -> HPDF_UINT;
    pub fn HPDF_Page_SetLineWidth(page: HPDF_Page, line_width: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetLineCap(page: HPDF_Page, line_cap: HPDF_LineCap)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetLineJoin(page: HPDF_Page, line_join: HPDF_LineJoin)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetMiterLimit(page: HPDF_Page, miter_limit: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetDash(page: HPDF_Page, dash_ptn: *const HPDF_UINT16,
                             num_param: HPDF_UINT, phase: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetFlat(page: HPDF_Page, flatness: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetExtGState(page: HPDF_Page, ext_gstate: HPDF_ExtGState)
     -> HPDF_STATUS;
    pub fn HPDF_Page_GSave(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_GRestore(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Concat(page: HPDF_Page, a: HPDF_REAL, b: HPDF_REAL,
                            c: HPDF_REAL, d: HPDF_REAL, x: HPDF_REAL,
                            y: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_MoveTo(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_LineTo(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_CurveTo(page: HPDF_Page, x1: HPDF_REAL, y1: HPDF_REAL,
                             x2: HPDF_REAL, y2: HPDF_REAL, x3: HPDF_REAL,
                             y3: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_CurveTo2(page: HPDF_Page, x2: HPDF_REAL, y2: HPDF_REAL,
                              x3: HPDF_REAL, y3: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_CurveTo3(page: HPDF_Page, x1: HPDF_REAL, y1: HPDF_REAL,
                              x3: HPDF_REAL, y3: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_ClosePath(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Rectangle(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL,
                               width: HPDF_REAL, height: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Stroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_ClosePathStroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Fill(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Eofill(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_FillStroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_EofillStroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_ClosePathFillStroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_ClosePathEofillStroke(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_EndPath(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Clip(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_Eoclip(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_BeginText(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_EndText(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_SetCharSpace(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetWordSpace(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetHorizontalScalling(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetTextLeading(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetFontAndSize(page: HPDF_Page, font: HPDF_Font,
                                    size: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_SetTextRenderingMode(page: HPDF_Page,
                                          mode: HPDF_TextRenderingMode)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetTextRise(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetTextRaise(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_MoveTextPos(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_MoveTextPos2(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetTextMatrix(page: HPDF_Page, a: HPDF_REAL,
                                   b: HPDF_REAL, c: HPDF_REAL, d: HPDF_REAL,
                                   x: HPDF_REAL, y: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_MoveToNextLine(page: HPDF_Page) -> HPDF_STATUS;
    pub fn HPDF_Page_ShowText(page: HPDF_Page, text: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_Page_ShowTextNextLine(page: HPDF_Page,
                                      text: *const ::libc::c_char)
     -> HPDF_STATUS;
